--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,10 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "yaml": "^2.3.4"
+  }
 }
